hphp/hack/test/typecheck/destructure/simple.php.exp
ERROR: File "simple.php", line 7, characters 10-11:
Variable `$i` is undefined, or not always defined. (Naming[2050])
  File "simple.php", line 4, characters 30-31:
  Did you mean `$x` instead?
ERROR: File "simple.php", line 5, characters 3-23:
Invalid assignment (Typing[4110])
  File "simple.php", line 5, characters 16-17:
  Expected `nothing`
  File "simple.php", line 4, characters 25-27:
  But got `int`
ERROR: File "simple.php", line 6, characters 3-29:
Invalid assignment (Typing[4110])
  File "simple.php", line 6, characters 9-10:
  Expected `shape('a' => int)`
  File "simple.php", line 6, characters 25-25:
  But got `int`
ERROR: File "simple.php", line 6, characters 3-29:
Invalid assignment (Typing[4110])
  File "simple.php", line 6, characters 13-14:
  Expected `nothing`
  File "simple.php", line 6, characters 28-28:
  But got `int`
